--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sound": "^1.2.0",
     "recompose": "^0.30.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
