--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "compose": "^0.1.2",
     "firebase": "8.3",
+    "http-proxy-middleware": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^5.3.0",
